2005-07-07  Al Riddoch  <alriddoch@zepler.org>

	* skstream.spec.in: Clean up spec.

	* NEWS: Update news.

	* configure.ac: Increment version.

	* Release 0.3.4, interface version 2.0.0.

2005-07-01  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.h, skstream/skstream.cpp: Make functions
	  non-virtual if they don't require it. Get rid of unused return
	  value for setbuf(). Move some functionality into
	  socketbuf::setSocket(). Make sure socket is valid before getting
	  its peer name.

2005-04-30  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Update autoconf usage to be more correct.
	  Get rid of SKSTREAM_VERSION.

	* NEWS: Add last release for completeness.

2004-03-03  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.h, skstream/skstream.cpp: Add a virtual
	  destructor to basic_socket interface.

2004-01-14  Al Riddoch  <alriddoch@zepler.org>

	* test/basicskstreamtest.h: Socket buffers are now automatically
	  deleted by the socket streams which own them.

2004-12-31  Al Riddoch  <alriddoch@zepler.org>

	* skstream.spec.in: Update spec with License URL Package Vendor
	  and Distribution tags.

2004-12-06  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.cpp, skstream/skserver.cpp: Fix an issue with
	  shutdown arguments being different in windows.

2004-11-30  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.3.3, interface version 1.0.0.

2004-11-29  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.h, skstream/skstream.cpp: Inline operator!
	  and timeout as they don't need to be virtual. Don't inline
	  open() as its too big. Make setOutpeer return void, as the returned
	  bool value was useless and ignored.

2004-11-24  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.cpp, skstream/skstream.h, skstream/skstream_unix.h:
	  Re-work the way stream buffer objects are created so they are
	  allocated in the super class using new, and passed to the base